--- a/model/House_Prices_Prediction_Notebook.ipynb
+++ b/model/House_Prices_Prediction_Notebook.ipynb
@@ -10,10 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de68deee-b5be-4249-b54d-cdd81998e2df",
-   "metadata": {},
+   "id": "dba855e4-dead-4c33-b3b0-59fa854d0fe0",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "<img src=\"https://miro.medium.com/v2/resize:fit:720/format:webp/0*NCO1DF14J42HEQWR.jpg\" width=\"700\" height=\"500\">"
+    "![Image](house_img.jpg)"
    ]
   },
   {
